Implement Stateless MCP (SEP-2575) in Java SDK
- Register stateless protocol version 2026-06-18
- Add _meta parameters for inline protocol negotiation metadata
- Support MCP-Protocol-Version HTTP header
- Bypass connection handshakes in HttpMcpTransportV20260618
- Implement dynamic client-side fallback/retry protocol negotiation

TAG=agy
CONV=2e1a2106-f882-4b08-92df-a27ba37c6fae